--- a/UFCMobile/View/cells/Chat/ChatTableViewCell.xib
+++ b/UFCMobile/View/cells/Chat/ChatTableViewCell.xib
@@ -6,11 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Baseline standard spacing" minToolsVersion="9.0"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -24,60 +20,44 @@
                 <rect key="frame" x="0.0" y="0.0" width="357" height="89.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile_empty" translatesAutoresizingMaskIntoConstraints="NO" id="WTs-hW-P3i">
-                        <rect key="frame" x="30" y="18" width="54" height="54"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="WTs-hW-P3i" secondAttribute="height" multiplier="1:1" id="5z3-6M-plY"/>
-                        </constraints>
-                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Titulo da Cadeira" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="nfY-Eg-9Qo">
-                        <rect key="frame" x="92" y="18" width="222" height="25"/>
+                        <rect key="frame" x="30" y="18" width="283" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.043137254899999998" green="0.53333333329999999" blue="0.25098039220000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="08:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ypv-5s-hj5">
-                        <rect key="frame" x="322" y="18" width="35" height="14.5"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="35" id="LGI-fn-bzs"/>
-                        </constraints>
+                        <rect key="frame" x="323" y="18" width="34" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. " lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EpE-U0-f1H">
-                        <rect key="frame" x="92" y="43" width="222" height="29"/>
+                        <rect key="frame" x="30" y="43" width="327" height="29"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="WTs-hW-P3i" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="0GS-SX-Aac"/>
-                    <constraint firstItem="WTs-hW-P3i" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" multiplier="0.6" id="4Dx-9X-WvO"/>
-                    <constraint firstItem="EpE-U0-f1H" firstAttribute="bottom" secondItem="WTs-hW-P3i" secondAttribute="bottom" id="54w-uC-tI0"/>
-                    <constraint firstItem="nfY-Eg-9Qo" firstAttribute="leading" secondItem="WTs-hW-P3i" secondAttribute="trailing" constant="8" id="58V-TW-WSn"/>
-                    <constraint firstItem="nfY-Eg-9Qo" firstAttribute="top" secondItem="WTs-hW-P3i" secondAttribute="top" id="POz-yP-BPc"/>
-                    <constraint firstAttribute="trailing" secondItem="Ypv-5s-hj5" secondAttribute="trailing" id="SVx-7T-m5p"/>
-                    <constraint firstItem="WTs-hW-P3i" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="YAW-d6-vI7"/>
-                    <constraint firstItem="EpE-U0-f1H" firstAttribute="firstBaseline" secondItem="nfY-Eg-9Qo" secondAttribute="baseline" constant="16" symbolType="layoutAnchor" id="bje-eQ-ixO"/>
-                    <constraint firstItem="EpE-U0-f1H" firstAttribute="centerX" secondItem="nfY-Eg-9Qo" secondAttribute="centerX" id="bqW-1m-44R"/>
-                    <constraint firstItem="EpE-U0-f1H" firstAttribute="width" secondItem="nfY-Eg-9Qo" secondAttribute="width" id="hsX-of-lol"/>
-                    <constraint firstItem="Ypv-5s-hj5" firstAttribute="leading" secondItem="nfY-Eg-9Qo" secondAttribute="trailing" constant="8" id="mEg-cS-Nbp"/>
-                    <constraint firstAttribute="trailing" secondItem="Ypv-5s-hj5" secondAttribute="trailing" id="t0U-9b-52a"/>
-                    <constraint firstItem="Ypv-5s-hj5" firstAttribute="top" secondItem="nfY-Eg-9Qo" secondAttribute="top" id="zfp-PK-LgT"/>
+                    <constraint firstItem="EpE-U0-f1H" firstAttribute="trailing" secondItem="Ypv-5s-hj5" secondAttribute="trailing" id="0hT-AT-GdO"/>
+                    <constraint firstItem="Ypv-5s-hj5" firstAttribute="leading" secondItem="nfY-Eg-9Qo" secondAttribute="trailing" constant="10" id="BPA-B3-ivc"/>
+                    <constraint firstItem="Ypv-5s-hj5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="18" id="ChA-9u-pTf"/>
+                    <constraint firstItem="EpE-U0-f1H" firstAttribute="top" secondItem="nfY-Eg-9Qo" secondAttribute="bottom" constant="5" id="HnU-vV-kBj"/>
+                    <constraint firstItem="EpE-U0-f1H" firstAttribute="leading" secondItem="nfY-Eg-9Qo" secondAttribute="leading" id="OAV-MV-lis"/>
+                    <constraint firstItem="nfY-Eg-9Qo" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="hs2-qF-DEH"/>
+                    <constraint firstItem="nfY-Eg-9Qo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="7" id="x3M-m4-5NK"/>
                 </constraints>
             </tableViewCellContentView>
+            <constraints>
+                <constraint firstItem="njF-e1-oar" firstAttribute="trailing" secondItem="Ypv-5s-hj5" secondAttribute="trailing" constant="38" id="cOc-jI-GCz"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="imgFoto" destination="WTs-hW-P3i" id="oRN-M1-ANG"/>
                 <outlet property="txtTitulo" destination="nfY-Eg-9Qo" id="PVa-Cr-Peq"/>
                 <outlet property="txtUltimaMsg" destination="EpE-U0-f1H" id="oTI-Yb-Ra9"/>
             </connections>
             <point key="canvasLocation" x="71.5" y="136.5"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="profile_empty" width="1024" height="1024"/>
-    </resources>
 </document>
