--- a/UFCMobile/View/Base.lproj/Main.storyboard
+++ b/UFCMobile/View/Base.lproj/Main.storyboard
@@ -145,7 +145,7 @@
                     <connections>
                         <outlet property="txtMatricula" destination="1KX-3e-aG7" id="mct-iB-Nbz"/>
                         <outlet property="txtSenha" destination="P6J-VN-R8N" id="XB6-D0-qjq"/>
-                        <segue destination="AQX-HM-8tp" kind="show" identifier="gotoLogar" id="y8q-HR-BTo"/>
+                        <segue destination="AQX-HM-8tp" kind="presentation" identifier="gotoLogar" modalTransitionStyle="crossDissolve" id="y8q-HR-BTo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -155,7 +155,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="138.75" y="129.92957746478874"/>
+            <point key="canvasLocation" x="-1301" y="130"/>
         </scene>
         <!--Perfil-->
         <scene sceneID="9hV-13-eUJ">
@@ -269,11 +269,12 @@
                         <outlet property="indicadorDownload" destination="el0-Lk-yRF" id="JOj-mA-uTw"/>
                         <outlet property="txtMatricula" destination="TSW-S7-K8N" id="qgP-ta-get"/>
                         <outlet property="txtNome" destination="zwL-Mv-UhM" id="ysh-Ig-IVq"/>
+                        <segue destination="cgX-uq-cCr" kind="presentation" identifier="gotoOpcaoEscolhida" modalTransitionStyle="crossDissolve" id="KbR-VU-ctH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kts-QG-xVn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="940"/>
+            <point key="canvasLocation" x="203" y="395"/>
         </scene>
         <!--Editar Perfil-->
         <scene sceneID="lnU-mN-yOR">
@@ -449,7 +450,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="138.75" y="1608.8028169014085"/>
+            <point key="canvasLocation" x="1746" y="805"/>
         </scene>
         <!--UFC-->
         <scene sceneID="fa2-Zi-DPm">
@@ -529,14 +530,14 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pjl-d6-2Og" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1026" y="940"/>
+            <point key="canvasLocation" x="203" y="1495"/>
         </scene>
         <!--Inicio-->
         <scene sceneID="Gta-qd-lUn">
             <objects>
                 <viewController id="fdJ-jW-2bz" customClass="HomeViewController" customModule="UFCMobile" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="FW3-3N-rwA">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="455"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="452"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="tEk-fA-EdY">
@@ -558,7 +559,7 @@
                                 </connections>
                             </collectionView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BjJ-na-Uhk">
-                                <rect key="frame" x="0.0" y="50" width="320" height="356"/>
+                                <rect key="frame" x="0.0" y="50" width="320" height="353"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="fdJ-jW-2bz" id="4Ni-eC-60F"/>
@@ -588,14 +589,14 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lMn-qF-c3q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2709" y="-207"/>
+            <point key="canvasLocation" x="994" y="-1294"/>
         </scene>
         <!--Configurações-->
         <scene sceneID="BM5-Us-4PX">
             <objects>
                 <tableViewController id="6vp-fD-dx4" customClass="ConfiguracaoTableViewController" customModule="UFCMobile" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Vjk-bF-2rG">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="406"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="403"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.95294117649999999" green="0.96078431369999995" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
                         <prototypes>
@@ -626,7 +627,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bdH-4K-usB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1027" y="-543"/>
+            <point key="canvasLocation" x="994" y="2231"/>
         </scene>
         <!--Mensagens-->
         <scene sceneID="bFY-8I-Afn">
@@ -637,7 +638,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="QJ1-QT-2pd">
-                                <rect key="frame" x="0.0" y="113" width="320" height="50"/>
+                                <rect key="frame" x="0.0" y="116" width="320" height="50"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="ZGS-aN-ZOO"/>
@@ -655,7 +656,7 @@
                                 </connections>
                             </collectionView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Zli-ic-AV7">
-                                <rect key="frame" x="0.0" y="163" width="320" height="356"/>
+                                <rect key="frame" x="0.0" y="166" width="320" height="353"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="IL6-R2-0gP">
@@ -696,7 +697,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AAt-69-02g" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2764" y="495"/>
+            <point key="canvasLocation" x="994" y="-575"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="igT-dG-mDD">
@@ -719,7 +720,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SwL-VP-Gdx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1013" y="130"/>
+            <point key="canvasLocation" x="-611" y="130"/>
         </scene>
         <!--Home-->
         <scene sceneID="wMM-tM-JfJ">
@@ -728,7 +729,7 @@
                     <tabBarItem key="tabBarItem" title="Home" image="home-icon" id="Cyc-Qq-kSc"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" largeTitles="YES" id="yoG-QB-cp4">
-                        <rect key="frame" x="0.0" y="20" width="320" height="93"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -741,7 +742,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ttg-ib-IP2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1937" y="-207"/>
+            <point key="canvasLocation" x="203" y="-1293"/>
         </scene>
         <!--Configurações-->
         <scene sceneID="Txl-Rk-Sw1">
@@ -750,7 +751,7 @@
                     <tabBarItem key="tabBarItem" title="Configurações" image="conf-icon" id="ra0-T5-cvZ"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" largeTitles="YES" id="ul8-67-GIh">
-                        <rect key="frame" x="0.0" y="20" width="320" height="93"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" name="alternateSelectedControlTextColor" catalog="System" colorSpace="catalog"/>
                     </navigationBar>
@@ -761,7 +762,32 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3oP-Mc-gJG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1013" y="-1230"/>
+            <point key="canvasLocation" x="203" y="2231"/>
+        </scene>
+        <!--Opção-->
+        <scene sceneID="5df-ft-lFh">
+            <objects>
+                <tableViewController id="Qt3-mc-Xoc" customClass="PerfilOpcaoTableViewController" customModule="UFCMobile" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="4ri-aT-ARl">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <connections>
+                            <outlet property="dataSource" destination="Qt3-mc-Xoc" id="WI4-YI-x5g"/>
+                            <outlet property="delegate" destination="Qt3-mc-Xoc" id="7fQ-KP-Nxh"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Opção" id="Zy8-RS-2Lz">
+                        <barButtonItem key="leftBarButtonItem" title="Voltar" id="lGO-PT-t2n">
+                            <connections>
+                                <action selector="btnVoltar:" destination="Qt3-mc-Xoc" id="lno-94-4a0"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mVK-Ie-dP4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1746" y="130"/>
         </scene>
         <!--Mensagens-->
         <scene sceneID="fXk-pv-B4Z">
@@ -770,7 +796,7 @@
                     <tabBarItem key="tabBarItem" title="Mensagens" image="chat-icon" id="y67-IF-dKf"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="0rQ-7t-eRC">
-                        <rect key="frame" x="0.0" y="20" width="320" height="93"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" name="alternateSelectedControlTextColor" catalog="System" colorSpace="catalog"/>
                     </navigationBar>
@@ -781,11 +807,12 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="008-kZ-y7E" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1937" y="495"/>
+            <point key="canvasLocation" x="203" y="-574"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="z5E-qb-rwM">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="M2C-gu-TE6" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1UT-OU-fRS" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="6NT-QL-wnj">
@@ -797,9 +824,8 @@
                         <segue destination="02s-lz-bWh" kind="relationship" relationship="rootViewController" id="tC7-eM-B36"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="M2C-gu-TE6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-611" y="1458"/>
+            <point key="canvasLocation" x="994" y="805"/>
         </scene>
         <!--Conversa View Controller-->
         <scene sceneID="VdQ-jY-u53">
@@ -894,7 +920,30 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="3608" y="494"/>
+            <point key="canvasLocation" x="1746" y="-575"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="lnJ-7D-rCH">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gE9-Ty-uDW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cgX-uq-cCr" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="exD-UM-ZkQ">
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.95294117649999999" green="0.96078431369999995" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="barTintColor" red="0.094117647058823528" green="0.52941176470588236" blue="0.2627450980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="0.95294117649999999" green="0.96078431369999995" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Qt3-mc-Xoc" kind="relationship" relationship="rootViewController" id="QSu-HL-2oL"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="994" y="130"/>
         </scene>
     </scenes>
     <resources>
